
source_set("model_loader") {
  sources = [
    "util/model_loader.cc",
    "util/model_loader.h",
  ]

  deps = [
    "//azer",
    "//azer/third_party/assimp",
  ]
}


static_library("lordaeron") {
  sources = [
    "config/project_config.cc",
    "config/project_config.h",
    "context.cc",
    "context.h",
    "effect/adapter/diffuse_effect_adapter.cc",
    "effect/adapter/diffuse_effect_adapter.h",
    "effect/diffuse_effect.cc",
    "effect/diffuse_effect.h",
    "effect/diffuse_effect_provider.cc",
    "effect/diffuse_effect_provider.h",
    "effect/global_environemnt_params.cc",
    "effect/global_environemnt_params.h",
    "effect/scene_node_params.cc",
    "effect/scene_node_params.h",
    "mainframe_render_delegate.cc",
    "mainframe_render_delegate.h",
    "render/axis_aligned_bounding_box.h",
    "render/axis_aligned_bounding_box.cc",
    "render/bounding_volumn.cc",
    "render/bounding_volumn.h",
    "render/camera_overlay.cc",
    "render/camera_overlay.h",
    "render/light.cc",
    "render/light.h",
    "render/rotate_controller_object.cc",
    "render/rotate_controller_object.h",
    "scene/scene_context.cc",
    "scene/scene_context.h",
    "scene/scene_environment.cc",
    "scene/scene_environment.h",
    "scene/scene_loader.cc",
    "scene/scene_loader.h",
    "scene/scene_mesh.cc",
    "scene/scene_mesh.h",
    "scene/scene_node.cc",
    "scene/scene_node.h",
    "scene/scene_node_data.cc",
    "scene/scene_node_data.h",
    "scene/scene_node_traverse.cc",
    "scene/scene_node_traverse.h",
    "scene/scene_render.cc",
    "scene/scene_render.h",
    "scene/scene_tree_model.cc",
    "scene/scene_tree_model.h",
    "ui/camera_view.cc",
    "ui/camera_view.h",
    "ui/iconset.cc",
    "ui/iconset.h",
    "ui/models/repository_model.cc",
    "ui/models/repository_model.h",
    "ui/render_frame_window.cc",
    "ui/render_frame_window.h",
    "ui/renderer_info_pane.cc",
    "ui/renderer_info_pane.h",
    "ui/scene_render_window.cc",
    "ui/scene_render_window.h",
    "ui/scene_tree_view.cc",
    "ui/scene_tree_view.h",
    "ui/scene_tree_view_lineitem.cc",
    "ui/scene_tree_view_lineitem.h",
    "ui/theme/theme.cc",
    "ui/theme/theme.h",
    "ui/nelf_context.cc",
    "ui/nelf_context.h",
    "ui/toolbar/camera_control_toolbar.cc",
    "ui/toolbar/camera_control_toolbar.h",
    "ui/toolbar/object_control_toolbar.cc",
    "ui/toolbar/object_control_toolbar.h",
    "ui/window.cc",
    "ui/window.h",
    "util/xml_util.cc",
    "util/xml_util.h",
  ]
  deps = [
    ":model_loader",
  ]
  public_deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/math",
    "//azer/render/util",
    "//azer/util/xml",
    "//nelf",
    "res",
  ]
}

executable("mainframe") {
  output_name = "lordaeron_mainframe"
  sources = ["mainframe.cc",]
  deps = [":lordaeron"]
}

group("sandbox") {
  deps = ["sandbox"]
}