
source_set("model_loader") {
  sources = [
    "util/model_loader.cc",
    "util/model_loader.h",
  ]

  deps = [
    "//azer",
    "//azer/third_party/assimp",
  ]
}


static_library("lordaeron") {
  sources = [
    "config/project_config.cc",
    "config/project_config.h",
    "context.cc",
    "context.h",
    "effect/diffuse_effect_adapter.cc",
    "effect/diffuse_effect_adapter.h",
    "effect/diffuse_effect_provider.cc",
    "effect/diffuse_effect_provider.h",
    "effect/diffuse_effect.cc",
    "effect/diffuse_effect.h",
    "interactive/axis_object.cc",
    "interactive/axis_object.h",
    "interactive/controller_object.cc",
    "interactive/controller_object.h",
    "interactive/fps_camera_controller.cc",
    "interactive/fps_camera_controller.h",
    "interactive/interactive_context.cc",
    "interactive/interactive_context.h",
    "interactive/interactive_controller.cc",
    "interactive/interactive_controller.h",
    "interactive/picking_controller.cc",
    "interactive/picking_controller.h",
    "interactive/rotation_controller.cc",
    "interactive/rotation_controller.h",
    "interactive/scale_controller.h",
    "interactive/scale_controller.cc",
    "interactive/translation_controller.cc",
    "interactive/translation_controller.h",
    "mainframe_render_delegate.cc",
    "mainframe_render_delegate.h",
    "render/camera_overlay.cc",
    "render/camera_overlay.h",
    "render/light.cc",
    "render/light.h",
    "render/light_mesh.cc",
    "render/light_mesh.h",
    "scene/common_node_loader.cc",
    "scene/common_node_loader.h",
    "scene/scene_bounding_volumn.cc",
    "scene/scene_bounding_volumn.h",
    "scene/scene_loader.cc",
    "scene/scene_loader.h",
    "scene/scene_node.cc",
    "scene/scene_node.h",
    "scene/scene_node_data.cc",
    "scene/scene_node_data.h",
    "scene/scene_node_traverse.cc",
    "scene/scene_node_traverse.h",
    "scene/scene_node_picking.cc",
    "scene/scene_node_picking.h",
    "scene/scene_render_tree.cc",
    "scene/scene_render_tree.h",
    "scene/scene_tree_model.cc",
    "scene/scene_tree_model.h",
    "ui/camera_view.cc",
    "ui/camera_view.h",
#    "ui/controls/vector_controls.cc",
#    "ui/controls/vector_controls.h",
#    "ui/directional_light_pane.cc",
#    "ui/directional_light_pane.h",
    "ui/iconset.cc",
    "ui/iconset.h",
    "ui/models/repository_model.cc",
    "ui/models/repository_model.h",
    "ui/render_frame_window.cc",
    "ui/render_frame_window.h",
    "ui/renderer_info_pane.cc",
    "ui/renderer_info_pane.h",
    "ui/scene_render_window.cc",
    "ui/scene_render_window.h",
    "ui/scene_node_control_panel.cc",
    "ui/scene_node_control_panel.h",
    "ui/scene_tree_view.cc",
    "ui/scene_tree_view.h",
    "ui/scene_tree_view_lineitem.cc",
    "ui/scene_tree_view_lineitem.h",
    "ui/simple_render_window.cc",
    "ui/simple_render_window.h",
    "ui/theme/theme.cc",
    "ui/theme/theme.h",
    "ui/nelf_context.cc",
    "ui/nelf_context.h",
    "ui/toolbar/camera_control_toolbar.cc",
    "ui/toolbar/camera_control_toolbar.h",
    "ui/toolbar/object_control_toolbar.cc",
    "ui/toolbar/object_control_toolbar.h",
    "ui/window.cc",
    "ui/window.h",
    "util/axis_aligned_bounding_box.h",
    "util/axis_aligned_bounding_box.cc",
    "util/bounding_volumn.cc",
    "util/bounding_volumn.h",
    "util/picking.cc",
    "util/picking.h",
    "util/xml_util.cc",
    "util/xml_util.h",
  ]
  deps = [
    ":model_loader",
  ]
  public_deps = [
    "//skia",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer",
    "//azer/math",
    "//azer/render/util",
    "//azer/util/xml",
    "//nelf",
    "res",
  ]
}

executable("mainframe") {
  output_name = "lordaeron_mainframe"
  sources = ["mainframe.cc",]
  deps = [":lordaeron"]
}

group("sandbox") {
  deps = ["sandbox"]
}