
group("mesh") {
  deps = [
    ":entity",
  ]
}

executable("entity") {
  output_name = "lordaeron_sandbox_mesh_entity"
  sources = ["entity.cc",]
  deps = ["//lordaeron"]
}

executable("meshpart") {
  output_name = "lordaeron_sandbox_meshpart"
  sources = ["meshpart.cc",]
  deps = ["//lordaeron"]
}