
group("mesh") {
  deps = [
    ":entity",
    ":meshdemo",
  ]
}

executable("entity") {
  output_name = "lordaeron_sandbox_mesh_entity"
  sources = ["entity.cc",]
  deps = ["//lordaeron"]
}

executable("meshdemo") {
  output_name = "lordaeron_sandbox_mesh"
  sources = ["mesh.cc",]
  deps = ["//lordaeron"]
}