
group("objects") {
  deps = [
    ":frustrum",
    ":sinwave",
  ]
}

executable("frustrum") {
  output_name = "lordaeron_sandbox_objects_frustrum"
  sources = ["frustrum.cc",]
  deps = ["//lordaeron"]
}

executable("sinwave") {
  output_name = "lordaeron_sandbox_objects_sinwave"
  sources = ["sinwave.cc",]
  deps = ["//lordaeron"]
}