group("scene") {
  deps = [
    ":sceneui", 
    ":model",
    ":scene_config",
  ]
}

executable("model") {
  output_name = "lordaeron_sandbox_scene_model"
  sources = ["model.cc",]
  deps = ["//lordaeron"]
}

executable("sceneui") {
  output_name = "lordaeron_sandbox_sceneui"
  sources = ["sceneui.cc",]
  deps = ["//lordaeron"]
}

executable("scene_config") {
  output_name = "lordaeron_sandbox_scene_config"
  sources = ["scene_config.cc",]
  deps = ["//lordaeron"]
}